--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>My Proxy Hub</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #121212;
+      font-family: Arial, sans-serif;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+    }
+    h1 {
+      margin-top: 50px;
+      font-size: 36px;
+      color: #00ffcc;
+    }
+    .search-container {
+      margin-top: 30px;
+    }
+    input[type="text"] {
+      padding: 10px;
+      width: 300px;
+      border: none;
+      border-radius: 5px;
+    }
+    .links {
+      margin-top: 40px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+    }
+    .link {
+      background: #1e1e1e;
+      padding: 15px 25px;
+      border-radius: 10px;
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+    .link:hover {
+      background: #333;
+    }
+  </style>
+</head>
+<body>
+  <h1>My Proxy Hub</h1>
+
+  <div class="search-container">
+    <form action="https://www.google.com/search" method="GET" target="_blank">
+      <input type="text" name="q" placeholder="Search Google...">
+    </form>
+  </div>
+
+  <div class="links">
+    <a class="link" href="https://example1.com" target="_blank">YouTube</a>
+    <a class="link" href="https://example2.com" target="_blank">TikTok</a>
+    <a class="link" href="https://example3.com" target="_blank">Unblocked Games</a>
+    <a class="link" href="https://example4.com" target="_blank">Netflix</a>
+    <a class="link" href="https://example5.com" target="_blank">Discord</a>
+  </div>
+</body>
+</html>
 
